--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Ehrhardt_Link_KiPiFub</name>
+	<name>zpifub_Mario_Link_s0536176</name>
 	<comment></comment>
 	<projects>
 	</projects>
